src/lidarsubnode/log/build_2024-02-20_14-25-14/lidarsubnode/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ubuntu/ros2_ws/src/lidarsubnode/install/lidarsubnode/lib/python3.10/site-packages/lidarsubnode/lidarsub.py", line 23
    LaserScan.,
              ^
SyntaxError: invalid syntax

